# hy3

./: .drone.yml  .env  .env.server  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  output.json  package-lock.json  package.json  projects.py  pyproject.toml  requirements.txt  tailwind.config.js  the_art_of_skimming_through_documentation.md
.github/workflows/: Build.yml  update_projects_date.yml
content/: colophon.md  index.md  projects.md
content/blog/: Exploring SSE and PostgreSQL for Realtime Communication in Django.md  a-comprehensive-guide-to-multi-timezone-support-in-django.md  bootstraping-a-production-ready-django-project.md  exploring_sse_and_postgresql_for_realtime_communication_in_django.md  fuzzy_couscous_the_cli_for_a_better_django_development_experience.md  index.md  the_art_of_skimming_through_documentation.md
data/: projects.json
docs/: index.html  rss.xml  sitemap.xml
docs/blog/: index.html
docs/blog/a-comprehensive-guide-to-multi-timezone-support-in-django/: index.html
docs/blog/bootstraping-a-production-ready-django-project/: index.html
docs/blog/easy-database-and-migrations-reset-during-development/: index.html
docs/blog/exploring_sse_and_postgresql_for_realtime_communication_in_django/: index.html
docs/blog/fuzzy_couscous_the_cli_for_a_better_django_development_experience/: index.html
docs/blog/htmx-support-in-pycharm/: index.html
docs/blog/maximizing-productivity-pycharm-and-htmx-integration/: index.html
docs/blog/the_art_of_skimming_through_documentation/: index.html
docs/colophon/: index.html
docs/projects/: index.html
docs/static/css/: output.css
nginx/: hy3.conf
output/: index.html  rss.xml  sitemap.xml
output/blog/: index.html
output/blog/easy-database-and-migrations-reset-during-development/: index.html
output/blog/fuzzy_couscous_the_cli_for_a_better_django_development_experience/: index.html
pw/: feeds.py  urls.py
pw/management/commands/: build.py
static/css/: input.css  output.css
templates/: base.html  blog.html  colophon.html  home.html  projects.html
templates/coltrane/: content.html
templatetags/: blog_tags.py  project_tags.py
