[tool.poetry]
name = "pw"
version = "0.1.0"
description = ""
authors = ["Tobi DEGNON <tobidegnon@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coltrane = {git = "https://github.com/Tobi-De/coltrane.git"}
django-htmx = "^1.16.0"
mistune = "^3.0.1"
pytailwindcss = "^0.2.0"
poethepoet = "^0.22.1"


[tool.poe.tasks.t]
cmd = "tailwindcss -i static/css/input.css -o static/css/output.css --watch"
help = "Compile tailwind in watch mode"

[tool.poe.tasks.r]
cmd = "coltrane record --output docs --force"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
